# tibetannlp.com

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
docs/: CNAME  LICENSE.md  README.md  _navbar.md  _sidebar.md  background.md  examples.md  getting-started.md  help.md  index.html  reference.md
docs/CN_zh/: _navbar.md  _sidebar.md
docs/bo/: README.md  _navbar.md  _sidebar.md  guidelines.md  introduction.md  sentence_segmentation.md  word_segmentation.md  ངོ་སྤྲོད་.md  ཡི་གེ་གཉིས་པ་.md  ཡི་གེ་གསུམ་པ་.md
docs/bo/pos/: ADV.md  CASE.md  INTJ.md  NEG.md  NOUN.md  NUM.md  VERB.md  pos_tags.md
docs/bo/ཚིག་གཤིས་/: ADJ.md  ADP.md  ADV.md  AUX.md  CCONJ.md  DET.md  INTJ.md  NOUN.md  NUM.md  PART.md  PRON.md  PROPN.md  PUNCT.md  SCONJ.md  UD_POS.md  VERB.md
docs/bo_backup/ཚིག་གཤིས་/: ADP.md  ADV.md  AUX.md  DET.md  INTJ.md  NOUN.md  NUM.md  OTHER.md  PART.md  PRON.md  PROPN.md  PUNCT.md  SCONJ.md  SYM.md  UD_POS.md  VERB.md
docs/catalog/: introduction.md  pos_tagging.md  pos_tagging_of_verbs.md  sentence_segmentation.md  word_segmentation.md
docs/catalog/bo/: ཡི་གེ་དང་པོ་.md  ཡི་གེ་བཞི་བ་.md
docs/catalog/en/: introduction.md  word_segmentation.md
docs/en/: introduction.md  pos_tagging.md  sentence_segmentation.md  word_segmentation.md
docs/en/pos/: ADJ.md  ADV.md  CASE.md  CL.md  CV.md  DET.md  INTJ.md  NEG.md  NOUN.md  NUM.md  POS_tags.md  PRON.md  PUNC.md  VERB.md  V_NOUN.md  annotation_guideline.md  pos_tags.md  (+2 more)
docs/zh/: README.md  _sidebar.md
non-coding-work-reports/: 2023-10-04.md
tests/: test_example.py
(+106 files in other folders)
